--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "hbs": "^4.1.2",
+    "imdb-api": "^4.4.1",
     "js": "^0.1.0",
     "mongoose": "^5.13.0",
     "morgan": "^1.10.0",
