--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ PORT=3000
 
 SESSION_SECRET=somesecret
 imdbKey=94f5077f
+
+
+MONGODB_URI=mongodb://localhost/project2
+
+CLOUDINARY_NAME = joaopbbezerra
+CLOUDINARY_KEY = 693581843775438
+CLOUDINARY_SECRET = 6AEkC4dJx649tuupZrbigd1suKg
