fav list working

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ imdbKey=94f5077f
 
 MONGODB_URI=mongodb://localhost/project2
 
-CLOUDINARY_NAME = joaopbbezerra
-CLOUDINARY_KEY = 693581843775438
-CLOUDINARY_SECRET = 6AEkC4dJx649tuupZrbigd1suKg
+CLOUDINARY_NAME=joaopbbezerra
+CLOUDINARY_KEY=693581843775438
+CLOUDINARY_SECRET=6AEkC4dJx649tuupZrbigd1suKg
