--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "handlebars-helpers": "^0.10.0",
     "hbs": "^4.1.2",
     "imdb-api": "^4.4.1",
     "js": "^0.1.0",
