--- a/.env
+++ b/.env
@@ -4,8 +4,7 @@ SESSION_SECRET=somesecret
 imdbKey=94f5077f
 
 
-MONGODB_URI=mongodb://localhost/project2
-
+MONGODB_URI=mongodb+srv://admin:admin@cluster0.sbxwo.mongodb.net/matchflix?retryWrites=true&w=majority
 CLOUDINARY_NAME=joaopbbezerra
 CLOUDINARY_KEY=693581843775438
 CLOUDINARY_SECRET=6AEkC4dJx649tuupZrbigd1suKg
