--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-cloudinary": "^1.1.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
